-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.997 2011-05-02 04:35:16 remko Exp $
-----------------------------------------------------------------------------------------

2011-05-02	remko
	* gmt_init.c:		Fixed problems with custom page size.

2011-05-01	pwessel
	* job03.sh:		Replaced complicated awk scripting with gmtmath to ensure
				we get the common sampling range which changed by a tad
				due to the bug in project.
	* gmt_init.c:		New -b syntax to allow for mixed-type records on i/o.
	* gmt_io.c:		New binary i/o processing to allow separate types for each column.

2011-05-01	remko
	* test/grdview/icelandbox.sh:	New test case based on query by Peter Schmidt.
	* scripts/*.sh:		Replaced ". functions.sh" by ". ./functions.sh" to avoid problems
				with people who do not have . in their PATH. E.g., Ubuntu.
	* gmt_io.h:		Removed define GMT_native_binary
	* gmt_common.h:		Removed common.b.netcdf and put common.b.varnames under GMT_COMPAT
	* gmt_io.c, gmt_init.c:	Option -bic no longer refers to netCDF files. -bic?varnames still
				allowed for backwards compatibility; use file?varnames instead.
				NetCDF table file automatically recognised.

2011-04-29	remko
	* job04*.sh:		Made ex 4 and 4c more similar and rotated color bar.
	* grdview_func.c:	Removed grdview_init_setup because it produces unexpected results.

2011-04-28	remko
	* grdview_func.c:	Removed grdview_init_setup because it yields unpredictable
				results and prevends lineup of different 3D plots.

2011-04-28	pwessel
	* gmt_constants.h:	Declare and use GMT_BUFSIZ 4096 throughout.

2011-04-27	pwessel
	* gmt_map.c:		Store projected min/max in meters in current->rect_m[].
	* spotter/grdrotater_func.c:	Ensure that output grid xmin/xmax honors the current
				FORMAT_GEO_OUT range settings.
	* mapproject_func.c:	Used GMT_IN instead of GMT_OUT in output format of longitudes.